# rep_plugins

./: CMakeLists.txt  README.md  package.xml  rep_plugins.xml
cmake/: FindOpenVDB.cmake
include/rep_plugins/: agents_gaze_plugin.hpp  object_detection_3d_plugin.hpp  rep_plugin_base.hpp  simple_faces_plugin.hpp
src/: agents_gaze_plugin.cpp  context_republisher.cpp  object_detection_3d_plugin.cpp  rep_plugin_base.cpp  simple_faces_plugin.cpp
