<package>
  <name>rep_plugins</name>
  <version>0.0.1</version>
  <description>Package to implement RMSs as pluginlib plugins</description>

  <license>Apache 2.0</license>

  <maintainer email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>libopenvdb-dev</build_depend>
  <build_depend>libopenvdb</build_depend>
  <build_depend>tbb</build_depend>
  <build_depend>hri</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>chatgpt_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend> 
  <run_depend>pcl_ros</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>libopenvdb-dev</run_depend>
  <run_depend>libopenvdb</run_depend>
  <run_depend>tbb</run_depend>
  <run_depend>hri</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>vision_msgs</run_depend>
  <run_depend>chatgpt_ros</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
    <rep_plugins plugin="${prefix}/rep_plugins.xml" />
  </export>

</package>
